--- a/index.html
+++ b/index.html
@@ -1,18 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Document</title>
     <script
-      src="https://kit.fontawesome.com/1935d064dd.js"
-      crossorigin="anonymous"
+            src="https://kit.fontawesome.com/1935d064dd.js"
+            crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <p>Hello World!!!</p>
+    <link rel="stylesheet" href="styles.css"/>
+</head>
+<body>
+    <header>
+        <h1><span>Let us show a modal in this project!</span></h1>
+        <p>Click the Button Below</p>
+    </header>
 
-    <script src="script.js"></script>
-  </body>
+    <section>
+        <div class="container">
+            <form action="">
+                <button id="btn">TEST IT HERE</button>
+            </form>
+        </div>
+    </section>
+
+    <div class="modal">
+        <div class="modal-content">
+            <span class="close-modal">&times;</span>
+            <h1>Hello modal!</h1>
+            <hr>
+            <p>Here is some random text for the purpose of showing how
+            content would fit within the just created modal. This does not have
+            to make any sense, it is just some random text used for filling the space.
+            If you keep reading this, would probably have a bit too much time to use! :)</p>
+        </div>
+    </div>
+
+<script src="script.js"></script>
+</body>
 </html>
