--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
     <section>
         <div class="container">
             <form action="">
-                <button id="btn">TEST IT HERE</button>
+                <button id="btn" class="btn">TEST IT HERE</button>
             </form>
         </div>
     </section>
 
     <div class="modal">
         <div class="modal-content">
-            <span class="close-modal">&times;</span>
             <h1>Hello modal!</h1>
+            <span class="close-modal">&times;</span>
             <hr>
             <p>Here is some random text for the purpose of showing how
             content would fit within the just created modal. This does not have
